--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,12 +10,9 @@ main:
   - name: Papers
     url: /#papers
     weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
+  - name: Blogs
     url: /#news
-    weight: 13
+    weight: 12
   - name: Experience
     url: experience/
     weight: 20
